--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,185 +6,7 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇵🇱_PL_波兰_1
-    type: ss
-    server: 51.77.53.200
-    port: 4444
-    password: pKEW8JPByTVTLtM
-    cipher: aes-256-gcm
-  - &id002
-    name: 🇵🇱_PL_波兰_2
-    type: ss
-    server: 51.77.53.200
-    port: 7306
-    password: FoOiGlkAA9yPEGP
-    cipher: aes-256-gcm
-  - &id003
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: 156.146.38.163
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
-  - &id004
-    name: 🇵🇱_PL_波兰_3
-    type: ss
-    server: 51.77.53.200
-    port: 7002
-    password: RexnBgU7EV5ADxG
-    cipher: aes-256-gcm
-  - &id005
-    name: 🇵🇱_PL_波兰_4
-    type: ss
-    server: 51.77.53.200
-    port: 5001
-    password: Y6R9pAtvxxzmGC
-    cipher: aes-256-gcm
-  - &id006
-    name: 🇵🇱_PL_波兰_5
-    type: ss
-    server: 51.77.53.200
-    port: 6679
-    password: TEzjfAYq2IjtuoS
-    cipher: aes-256-gcm
-  - &id007
     name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: 172.67.164.78
-    port: 2052
-    cipher: auto
-    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: in3.wish.ml
-  - &id008
-    name: 🇵🇱_PL_波兰_6
-    type: ss
-    server: 51.77.53.200
-    port: 6697
-    password: TEzjfAYq2IjtuoS
-    cipher: aes-256-gcm
-  - &id009
-    name: 🇵🇱_PL_波兰_7
-    type: ss
-    server: 51.77.53.200
-    port: 8091
-    password: PCnnH6SQSnfoS27
-    cipher: aes-256-gcm
-  - &id010
-    name: 🇵🇱_PL_波兰_8
-    type: ss
-    server: 51.77.53.200
-    port: 2375
-    password: faBAoD54k87UJG7
-    cipher: aes-256-gcm
-  - &id011
-    name: 🇵🇱_PL_波兰_9
-    type: ss
-    server: 51.77.53.200
-    port: 8881
-    password: kDWvXYZoTBcGkC4
-    cipher: aes-256-gcm
-  - &id012
-    name: 🇵🇱_PL_波兰_10
-    type: ss
-    server: 51.77.53.200
-    port: 5004
-    password: g5MeD6Ft3CWlJId
-    cipher: aes-256-gcm
-  - &id013
-    name: 🇵🇱_PL_波兰_11
-    type: ss
-    server: 51.77.53.200
-    port: 6379
-    password: zDNVedRFPQexG9v
-    cipher: aes-256-gcm
-  - &id014
-    name: 🇵🇱_PL_波兰_12
-    type: ss
-    server: 51.77.53.200
-    port: 8118
-    password: cdBIDV42DCwnfIN
-    cipher: aes-256-gcm
-  - &id015
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 45.136.245.240
-    port: 12910
-    cipher: auto
-    uuid: 8259cb1c-dd6c-4739-9c88-af550d977525
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id016
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 23.154.136.2
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /linkvws
-  - &id017
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 158.51.121.36
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /linkvws
-  - &id018
-    name: 🇬🇧_GB_英国_1
-    type: ss
-    server: 212.102.53.197
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-gcm
-  - &id019
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
-    type: vmess
-    server: 172.67.130.140
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id020
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: vmess
-    server: 183.240.179.207
-    port: 30013
-    cipher: auto
-    uuid: 5bd5899a-4b78-4d75-8570-4d21b43422c4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
     type: vmess
     server: hk.wish.ml
     port: 2052
@@ -197,9 +19,20 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: in3.wish.ml
-  - &id022
-    name: 🇺🇸_US_美国_3
+        host: in4.wish.ml
+  - &id002
+    name: 🇷🇺_RU_俄罗斯联邦_1
+    type: vmess
+    server: 45.147.200.170
+    port: 42034
+    cipher: auto
+    uuid: 921e23ec-ee0e-43e0-a18b-77dbf15f20d8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
     server: s1c.v2.v001sss.xyz
     port: 2082
@@ -213,86 +46,47 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id023
-    name: 🇬🇧_GB_英国_2
+  - &id004
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: ss
-    server: 212.102.53.193
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-gcm
-  - &id024
-    name: 🇬🇧_GB_英国_3
-    type: ss
-    server: 212.102.53.80
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-gcm
-  - &id025
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 89.117.109.97
-    port: 443
-    password: rhnAUMfOWIgjT917yYCG7u
+    server: gd.jindoucloud.xyz
+    port: 55460
+    password: 587ef2a8-c487-4b12-b1ca-aba4c4dd4036
     cipher: chacha20-ietf-poly1305
-  - &id026
-    name: 🇺🇸_US_美国_5
+  - &id005
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: ss
-    server: 38.114.114.207
-    port: 7001
-    password: RexnBgU7EV5ADxG
-    cipher: aes-256-gcm
-  - &id027
-    name: 🇺🇸_US_美国_6
-    type: ss
-    server: 38.114.114.207
-    port: 8080
-    password: KixLvKzwjekG00rm
-    cipher: aes-256-gcm
-  - &id028
-    name: 🇺🇸_US_美国_7
-    type: ss
-    server: 52.88.161.5
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id029
-    name: 🇺🇸_US_美国_8
+    server: gdvo.lyunsub.win
+    port: 19375
+    password: 587ef2a8-c487-4b12-b1ca-aba4c4dd4036
+    cipher: chacha20-ietf-poly1305
+  - &id006
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
     type: vmess
-    server: russia.com
-    port: 8880
+    server: 172.67.164.78
+    port: 2052
     cipher: auto
-    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
+    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /
       headers:
-        host: sssub.v2.001.ssrsub.com
-  - &id030
-    name: 🇺🇸_US_美国_9
+        host: in3.wish.ml
+  - &id007
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
     type: vmess
-    server: russia.com
-    port: 2095
+    server: 183.240.179.207
+    port: 30013
     cipher: auto
-    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
+    uuid: 5bd5899a-4b78-4d75-8570-4d21b43422c4
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: sssub.v2.001.ssrsub.com
-  - &id031
-    name: 🇵🇱_PL_波兰_13
-    type: ss
-    server: 51.77.53.200
-    port: 8119
-    password: cdBIDV42DCwnfIN
-    cipher: aes-256-gcm
-  - &id032
+    network: tcp
+  - &id008
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
     server: 104.21.8.157
@@ -307,6 +101,115 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
+  - &id009
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 23.154.136.2
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
+  - &id010
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    type: vmess
+    server: 172.67.130.140
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id011
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 66.241.124.229
+    port: 443
+    cipher: auto
+    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: cold-dawn-9246.fly.dev
+    network: ws
+    ws-opts:
+      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
+      headers:
+        host: cold-dawn-9246.fly.dev
+  - &id012
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: russia.com
+    port: 2095
+    cipher: auto
+    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: sssub.v2.001.ssrsub.com
+  - &id013
+    name: 🇷🇺_RU_俄罗斯联邦_2
+    type: vmess
+    server: 45.136.245.240
+    port: 12910
+    cipher: auto
+    uuid: 8259cb1c-dd6c-4739-9c88-af550d977525
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id014
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: russia.com
+    port: 8880
+    cipher: auto
+    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: sssub.v2.001.ssrsub.com
+  - &id015
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 212.102.47.198
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id016
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: vmess
+    server: data-us-v1.shwjfkw.cn
+    port: 20401
+    cipher: auto
+    uuid: b1478e24-4916-3abe-8f17-15931012ecbe
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /debian
+      headers:
+        host: data-us-v1.shwjfkw.cn
 proxy-groups:
   - name: PROXY
     type: select
@@ -349,22 +252,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -386,22 +273,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
   - name: SELECT
     type: select
     proxies:
@@ -421,22 +292,6 @@ proxy-groups:
       - *id014
       - *id015
       - *id016
-      - *id017
-      - *id018
-      - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
