--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,7 +6,95 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 148.135.40.190
+    port: 8080
+    cipher: auto
+    uuid: f6c4905b-0308-4164-b1ad-4157531a8378
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /index?ed=2560
+  - &id002
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: vmess
+    server: vip3.niuniupremium.xyz
+    port: 16928
+    cipher: auto
+    uuid: 2ab54438-8af9-3711-bf1a-676fcc144586
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: vip3.niuniupremium.xyz
+    network: ws
+    ws-opts:
+      path: /v2ray
+  - &id003
+    name: 🇩🇪_DE_德国
+    type: vmess
+    server: de-frankfurt-oracle-b26cf5.ip1.shop
+    port: 45103
+    cipher: auto
+    uuid: 6d3404ef-27c6-48de-a83a-8ac6488760b4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: oracle-de-02.t3csyun.buzz
+    network: ws
+    ws-opts:
+      path: /de2
+  - &id004
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: ss
+    server: 5.forlive.live
+    port: 60033
+    password: 4c0e5766-0d17-318b-bff2-046c14cb27b5
+    cipher: chacha20-ietf-poly1305
+  - &id005
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: us-sanfrancisco-02.t3csyun.buzz
+    port: 34053
+    cipher: auto
+    uuid: 6d3404ef-27c6-48de-a83a-8ac6488760b4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: us-sanfrancisco-02.t3csyun.buzz
+    network: ws
+    ws-opts:
+      path: /us2
+  - &id006
+    name: 🇷🇺_RU_俄罗斯联邦_1
+    type: vmess
+    server: 45.147.200.170
+    port: 35972
+    cipher: auto
+    uuid: 6a2afda8-8798-434c-8964-1deb4e7655a5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: hk.wish.ml
+    port: 2052
+    cipher: auto
+    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us6_0.wish.ml
+  - &id008
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
     type: vmess
     server: 172.67.164.78
     port: 2052
@@ -20,104 +108,8 @@ proxies:
       path: /
       headers:
         host: in3.wish.ml
-  - &id002
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: 205.134.180.139
-    port: 443
-    password: lWaGPVFjmnag
-    cipher: chacha20-ietf-poly1305
-  - &id003
-    name: 🇵🇱_PL_波兰_1
-    type: ss
-    server: 51.77.53.200
-    port: 6379
-    password: zDNVedRFPQexG9v
-    cipher: aes-256-gcm
-  - &id004
-    name: 🇵🇱_PL_波兰_2
-    type: ss
-    server: 51.77.53.200
-    port: 2375
-    password: faBAoD54k87UJG7
-    cipher: aes-256-gcm
-  - &id005
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: russia.com
-    port: 8880
-    cipher: auto
-    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: sssub.v2.001.ssrsub.com
-  - &id006
-    name: 🇵🇱_PL_波兰_3
-    type: ss
-    server: 51.77.53.200
-    port: 8091
-    password: PCnnH6SQSnfoS27
-    cipher: aes-256-gcm
-  - &id007
-    name: 🇵🇱_PL_波兰_4
-    type: ss
-    server: 51.77.53.200
-    port: 6679
-    password: TEzjfAYq2IjtuoS
-    cipher: aes-256-gcm
-  - &id008
-    name: 🇵🇱_PL_波兰_5
-    type: ss
-    server: 51.77.53.200
-    port: 8119
-    password: cdBIDV42DCwnfIN
-    cipher: aes-256-gcm
   - &id009
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: 183.240.179.207
-    port: 30013
-    cipher: auto
-    uuid: 5bd5899a-4b78-4d75-8570-4d21b43422c4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇵🇱_PL_波兰_6
-    type: ss
-    server: 51.77.53.200
-    port: 7306
-    password: FoOiGlkAA9yPEGP
-    cipher: aes-256-gcm
-  - &id011
-    name: 🇵🇱_PL_波兰_7
-    type: ss
-    server: 51.77.53.200
-    port: 8118
-    password: cdBIDV42DCwnfIN
-    cipher: aes-256-gcm
-  - &id012
-    name: 🇵🇱_PL_波兰_8
-    type: ss
-    server: 51.77.53.200
-    port: 7002
-    password: RexnBgU7EV5ADxG
-    cipher: aes-256-gcm
-  - &id013
-    name: 🇵🇱_PL_波兰_9
-    type: ss
-    server: 51.77.53.200
-    port: 6697
-    password: TEzjfAYq2IjtuoS
-    cipher: aes-256-gcm
-  - &id014
-    name: 🇷🇺_RU_俄罗斯联邦
+    name: 🇷🇺_RU_俄罗斯联邦_2
     type: vmess
     server: 45.136.245.240
     port: 12910
@@ -130,50 +122,67 @@ proxies:
     network: ws
     ws-opts:
       path: /
-  - &id015
-    name: 🇺🇸_US_美国_3
-    type: trojan
-    server: 35.95.189.119
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trojan.burgerip.co.uk
+  - &id010
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+    type: vmess
+    server: 104.17.156.224
+    port: 2052
+    cipher: auto
+    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
-    alpn:
-      - http/1.1
-  - &id016
-    name: 🇨🇦_CA_加拿大
-    type: trojan
-    server: 35.182.39.30
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trojan.burgerip.co.uk
-    skip-cert-verify: true
-    network: tcp
-    alpn:
-      - http/1.1
-  - &id017
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: 36.151.195.48
-    port: 4603
-    udp: true
-    password: TNDSJfNv
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: trojan
-    server: 36.151.195.48
-    port: 4787
-    udp: true
-    password: TNDSJfNv
-    skip-cert-verify: true
-    network: tcp
-  - &id019
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: in4.wish.ml
+  - &id011
     name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 104.16.38.71
+    port: 2052
+    cipher: auto
+    uuid: c286daa2-59de-455c-8de8-ec032b6ce2e8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us6_0.wish.ml
+  - &id012
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 205.134.180.139
+    port: 443
+    password: lWaGPVFjmnag
+    cipher: chacha20-ietf-poly1305
+  - &id013
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 38.114.123.12
+    port: 20001
+    password: 🍄🍅🛦🍆🍇.🍈🧛.🍉
+    cipher: chacha20-ietf-poly1305
+  - &id014
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    type: vmess
+    server: 104.21.8.157
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id015
+    name: 🇺🇸_US_美国_7
     type: trojan
     server: 23.142.200.175
     port: 443
@@ -181,195 +190,125 @@ proxies:
     password: 27876_t7d7f4e3f
     skip-cert-verify: true
     network: tcp
-  - &id020
-    name: 🇬🇧_GB_英国
-    type: ss
-    server: 212.102.53.80
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-gcm
-  - &id021
-    name: 🇵🇱_PL_波兰_10
-    type: ss
-    server: 51.77.53.200
-    port: 5500
-    password: KixLvKzwjekG00rm
-    cipher: aes-256-gcm
-  - &id022
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 52.88.161.5
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id023
-    name: 🇺🇸_US_美国_6
-    type: ss
-    server: 35.94.178.238
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id024
-    name: 🇺🇸_US_美国_7
+  - &id016
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: trojan
+    server: 36.151.195.48
+    port: 4787
+    udp: true
+    password: TNDSJfNv
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇺🇸_US_美国_8
     type: ss
     server: 184.170.241.194
     port: 443
     password: shadowsocks
     cipher: aes-128-cfb
-  - &id025
-    name: 🇺🇸_US_美国_8
-    type: ss
-    server: 18.236.153.152
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id026
+  - &id018
     name: 🇺🇸_US_美国_9
     type: ss
     server: 34.208.170.155
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
-  - &id027
-    name: 🇵🇱_PL_波兰_11
-    type: ss
-    server: 51.77.53.200
-    port: 7001
-    password: RexnBgU7EV5ADxG
-    cipher: aes-256-gcm
-  - &id028
-    name: 🇵🇱_PL_波兰_12
-    type: ss
-    server: 51.77.53.200
-    port: 8000
-    password: KixLvKzwjekG00rm
-    cipher: aes-256-gcm
-  - &id029
-    name: 🇵🇱_PL_波兰_13
-    type: ss
-    server: 51.77.53.200
-    port: 8008
-    password: XKFKl2rULjIp74
-    cipher: aes-256-gcm
-  - &id030
-    name: 🇵🇱_PL_波兰_14
-    type: ss
-    server: 51.77.53.200
-    port: 8888
-    password: Y6R9pAtvxxzmGC
-    cipher: aes-256-gcm
-  - &id031
-    name: 🇵🇱_PL_波兰_15
-    type: ss
-    server: 51.77.53.200
-    port: 8009
-    password: XKFKl2rULjIp74
-    cipher: aes-256-gcm
-  - &id032
-    name: 🇦🇱_AL_阿尔巴尼亚
-    type: ss
-    server: 109.104.152.126
-    port: 51122
-    password: dongtaiwang.com
-    cipher: aes-256-gcm
-  - &id033
-    name: 🇵🇱_PL_波兰_16
-    type: ss
-    server: 51.77.53.200
-    port: 5000
-    password: Y6R9pAtvxxzmGC
-    cipher: aes-256-gcm
-  - &id034
-    name: 🇵🇱_PL_波兰_17
-    type: ss
-    server: 51.77.53.200
-    port: 5001
-    password: Y6R9pAtvxxzmGC
-    cipher: aes-256-gcm
-  - &id035
-    name: 🇵🇱_PL_波兰_18
-    type: ss
-    server: 51.77.53.200
-    port: 7307
-    password: FoOiGlkAA9yPEGP
-    cipher: aes-256-gcm
-  - &id036
-    name: 🇵🇱_PL_波兰_19
-    type: ss
-    server: 51.77.53.200
-    port: 3306
-    password: Y6R9pAtvxxzmGC
-    cipher: aes-256-gcm
-  - &id037
-    name: 🇩🇪_DE_德国
-    type: ss
-    server: 159.69.124.162
-    port: 1080
-    password: cGq0kG7vka83i10nxFbcDA
-    cipher: chacha20-ietf-poly1305
-  - &id038
-    name: 🇵🇱_PL_波兰_20
-    type: ss
-    server: 51.77.53.200
-    port: 8881
-    password: kDWvXYZoTBcGkC4
-    cipher: aes-256-gcm
-  - &id039
-    name: 🇵🇱_PL_波兰_21
-    type: ss
-    server: 51.77.53.200
-    port: 5003
-    password: g5MeD6Ft3CWlJId
-    cipher: aes-256-gcm
-  - &id040
+  - &id019
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
+    type: vmess
+    server: cfcdn2.sanfencdn9.com
+    port: 2052
+    cipher: auto
+    uuid: ccd92698-4499-472d-a06f-f90e7e89ba4f
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/3YKfzGw4
+      headers:
+        host: rpmlybgzsg2.yofnhkfc.xyz
+  - &id020
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: trojan
+    server: 36.151.195.48
+    port: 4603
+    udp: true
+    password: TNDSJfNv
+    skip-cert-verify: true
+    network: tcp
+  - &id021
     name: 🇺🇸_US_美国_10
     type: ss
-    server: 89.117.109.97
+    server: 52.88.161.5
     port: 443
-    password: rhnAUMfOWIgjT917yYCG7u
-    cipher: chacha20-ietf-poly1305
-  - &id041
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id022
     name: 🇺🇸_US_美国_11
     type: ss
-    server: 38.107.226.146
-    port: 1230
-    password: H5S0hvcxRi#YLmgU
-    cipher: chacha20-ietf-poly1305
-  - &id042
+    server: 35.94.178.238
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id023
     name: 🇺🇸_US_美国_12
-    type: ss
-    server: 216.246.15.225
-    port: 30129
-    password: Yc2CtrIz8L
-    cipher: aes-128-gcm
-  - &id043
-    name: 🇵🇱_PL_波兰_22
-    type: ss
-    server: 51.77.53.200
-    port: 9102
-    password: e4FCWrgpkji3QY
-    cipher: aes-256-gcm
-  - &id044
-    name: 🇵🇱_PL_波兰_23
-    type: ss
-    server: 51.77.53.200
-    port: 8882
-    password: kDWvXYZoTBcGkC4
-    cipher: aes-256-gcm
-  - &id045
-    name: 🇵🇱_PL_波兰_24
-    type: ss
-    server: 51.77.53.200
-    port: 5004
-    password: g5MeD6Ft3CWlJId
-    cipher: aes-256-gcm
-  - &id046
-    name: 🇵🇱_PL_波兰_25
-    type: ss
-    server: 51.77.53.200
-    port: 3389
-    password: Y6R9pAtvxxzmGC
-    cipher: aes-256-gcm
+    type: vmess
+    server: 23.154.136.2
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
+  - &id024
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
+    type: vmess
+    server: 172.67.130.140
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id025
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id026
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: russia.com
+    port: 8080
+    cipher: auto
+    uuid: 4b05abf5-c68d-4ffc-915f-add2f3786dca
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: sssub.v2.001.ssrsub.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -422,26 +361,6 @@ proxy-groups:
       - *id024
       - *id025
       - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
-      - *id040
-      - *id041
-      - *id042
-      - *id043
-      - *id044
-      - *id045
-      - *id046
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -473,26 +392,6 @@ proxy-groups:
       - *id024
       - *id025
       - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
-      - *id040
-      - *id041
-      - *id042
-      - *id043
-      - *id044
-      - *id045
-      - *id046
   - name: SELECT
     type: select
     proxies:
@@ -522,26 +421,6 @@ proxy-groups:
       - *id024
       - *id025
       - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
-      - *id040
-      - *id041
-      - *id042
-      - *id043
-      - *id044
-      - *id045
-      - *id046
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
